feat: Importing styles from template

--- a/template/blog_post.html
+++ b/template/blog_post.html
@@ -12,6 +12,8 @@
 
     <title>$if(title-prefix)$$title-prefix$ – $endif$$pagetitle$</title>
 
+    <link rel="stylesheet" href="../dist/css/article_theme.css">
+
     $if(math)$
       $math$
     $endif$
